--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
         <div class="col-md-8">
           <div class="mr_previous__headline">
             <h1>Hey, buddy!</h1>
-            <p>Olá, sou o Felipe Marcon, Fe ou Marcon. Atendo por qualquer um deles :). Atualmente sou Desenvolvedor Web em Sorocaba, na Atua Agência, sendo responsável por criar e estruturar projetos web, desde wireframes até o deploy para produção. Sou um fã de desenvolvimento web, tecnologia e estudar coisas novas.</p>
+            <p>Olá, sou o Felipe Marcon, Fe ou Marcon. Atendo por qualquer um deles :).</p>
+            <p>Atualmente sou Desenvolvedor Web em Sorocaba, na Atua Agência, sendo responsável por criar e estruturar projetos web, desde wireframes até o deploy para produção. Sou um fã de desenvolvimento web, tecnologia e estudar coisas novas.</p>
             <p>Por conta da minha graduação em Design Gráfico, também tenho uma paixão pelo Desgin em si e Interfaces de Usuário.</p>
           </div>
 
