--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
           <div class="mr_previous__headline">
             <h1>Hey, buddy!</h1>
             <p>Olá, sou o Felipe Marcon, Fe ou Marcon. Atendo por qualquer um deles ;).</p>
-            <p>Sou formado em Design Gráfico e atualmente sou UI Designer na Gamers Club, uma plataforma de eSports e Desenvolvedor Web como freelancer. Já atuei como Desenvolvedor efetivo em agências de Publicidade e Marketing Digital, sendo elas a Kite Estratégias Digitais e Atua Agência, ambas em Sorocaba - SP. Nesses cargos eu era o responsável por criar e estruturar projetos web, desde wireframes até o deploy para produção. Sou um aficionado em design, interações, desenvolvimento web, tecnologia e aprender coisas novas.</p>
+            <p>Sou formado em Design Gráfico e atualmente sou UI Designer na Gamers Club, uma plataforma de e-Sports e Desenvolvedor Web como freelancer. Já atuei como Desenvolvedor efetivo em agências de Publicidade e Marketing Digital, sendo elas a Kite Estratégias Digitais e Atua Agência, ambas em Sorocaba - SP.</p>
+            <p>Nesses cargos eu era o responsável por criar e estruturar projetos web, desde wireframes até o deploy para produção. Sou um aficionado em design, interações, desenvolvimento web, tecnologia e aprender coisas novas.</p>
             <p>Nas horas vagas gosto de jogar, especialmente no desktop, ouvir música e a tocar guitarra e compor músicas.</p>
           </div>
 
