--- a/index.html
+++ b/index.html
@@ -89,13 +89,15 @@
       <div class="row">
         <div class="col-md-8">
           <div class="mr_previous__headline">
-            <h1>Hey, buddy!</h1>
-            <p>Olá, sou o Felipe Marcon, Fe ou Marcon. Atendo por qualquer um deles ;).</p>
-            <p>Sou formado em Design Gráfico e atualmente sou UI Designer na Gamers Club, uma plataforma de e-Sports e Desenvolvedor Web como freelancer. Já atuei como Desenvolvedor efetivo em agências de Publicidade e Marketing Digital, sendo elas a Kite Estratégias Digitais e Atua Agência, ambas em Sorocaba - SP.</p>
-            <p>Nesses cargos eu era o responsável por criar e estruturar projetos web, desde wireframes até o deploy para produção. Sou um aficionado em design, interações, desenvolvimento web, tecnologia e aprender coisas novas.</p>
-            <p>Nas horas vagas gosto de jogar, especialmente no desktop, ouvir música e a tocar guitarra e compor músicas.</p>
-          </div>
+            <h1>Olá 👋🏻!</h1>
+            <p>Sou o Felipe Marcon, Fe ou Marcon. Atendo por qualquer um deles ;).</p>
+            <p>Sou formado em Design Gráfico pela Universidade de Sorocaba e Pós Graduado em Tecnologias e Inovações Web. Atualmente sou Product Designer na Gamers Club, uma startup focada e-Sports, e desenvolvedor front-end em projetos pontuais.
+            <p>A experiência com desenvolvimento vem de projetos pontuais dentro da Gamers Club, mas também da época em que atuei como Desenvolvedor Web em agências de Publicidade e Marketing Digital. Nesses cargos eu era o responsável por criar e estruturar projetos web, desde wireframes até o deploy para produção.</p>
 
+            <p>Sou um aficionado em design, interações, desenvolvimento web, tecnologia e busca sempre estar evoluindo e aprendendo coisas novas.</p>
+
+            </p>Em minhas horas vagas gosto de jogar, especialmente no desktop, ouvir muita música, tocar guitarra (meu grande hobby 🎸) e compor músicas.</p>
+          </div>
           <div class="mr_previous__contact">
             <p>Quer conversar? Entre em contato pelo e-mail - <a href="mailto:oi@felipemarcon.com.br">oi@felipemarcon.com.br</a></p>
           </div>
