--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
             <p>Sou um aficionado em design, interações, desenvolvimento web, tecnologia e busca sempre estar evoluindo e aprendendo coisas novas.</p>
 
-            </p>Em minhas horas vagas gosto de jogar, especialmente no desktop, ouvir muita música, tocar guitarra (meu grande hobby 🎸) e compor músicas.</p>
+            <p>Em minhas horas vagas gosto de jogar, especialmente no desktop, ouvir muita música, tocar guitarra (meu grande hobby 🎸) e compor músicas.</p>
           </div>
           <div class="mr_previous__contact">
             <p>Quer conversar? Entre em contato pelo e-mail - <a href="mailto:oi@felipemarcon.com.br">oi@felipemarcon.com.br</a></p>
