--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>Felipe Marcon - Hello, buddy!</title>
+  <title>Felipe Marcon - UI Designer!</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
