Revert "Update index.html"
This reverts commit 41afba57023298e71054b88d6bffb97ffaf9d535.

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <div class="row">
         <div class="col-md-8">
           <div class="mr_previous__headline">
-            <h1>Olá 👋🏻</h1>
+            <h1>Olá 👋🏻!</h1>
             <p>Sou o Felipe Marcon, Fe ou Marcon. Atendo por qualquer um deles ;).</p>
             <p>Sou formado em Design Gráfico pela Universidade de Sorocaba e Pós Graduado em Tecnologias e Inovações Web. Atualmente sou Product Designer na Gamers Club, uma startup focada e-Sports, e desenvolvedor front-end em projetos pontuais.
             <p>A experiência com desenvolvimento vem de projetos pontuais dentro da Gamers Club, mas também da época em que atuei como Desenvolvedor Web em agências de Publicidade e Marketing Digital. Nesses cargos eu era o responsável por criar e estruturar projetos web, desde wireframes até o deploy para produção.</p>
