--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>Felipe Marcon - UI Designer!</title>
+  <title>Felipe Marcon - Designer de Produto</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -28,88 +28,76 @@
   <meta name="msapplication-TileColor" content="#fff">
   <meta name="msapplication-TileImage" content="src/images/favicon.png">
 
-  <link rel="stylesheet" media="all" href="src/styles/main.css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700;800&display=swap" rel="stylesheet">
+
+  <!-- <link rel="stylesheet" media="all" href="src/styles/main.css" /> -->
+  <link rel="stylesheet" media="all" href="https://cdn.jsdelivr.net/npm/bootstrap-v4-grid-only@1.0.0/dist/bootstrap-grid.min.css" />
+  <link rel="stylesheet" media="all" href="https://cdn.jsdelivr.net/npm/bootstrap-utilities@4.1.3/bootstrap-utilities.min.css" />
+  <link rel="stylesheet" media="all" href="dist/style.css" />
 
 </head>
 
 <body>
 
-  <header class="mr_header-prev">
-    <div class="container">
-      <div class="row flex_centered">
-        <div class="col-md-3">
-          <div class="mr_header-prev__brand">
+  <header class="mHeader">
+    <div class="container px-lg-0">
+      <div class="row justify-content-between">
+        <div class="col-6 col-md-2">
+          <div class="mHeader__brand">
             <a href="/">
-              <?xml version="1.0" encoding="UTF-8"?>
-              <svg width="180px" height="55px" viewBox="0 0 180 55" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                <defs>
-                  <polygon id="path-1" points="0.7804 0.4213 15.455 0.4213 15.455 16.4213 0.7804 16.4213"></polygon>
-                </defs>
-                <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                  <g id="00_Home" transform="translate(-149.000000, -83.000000)">
-                    <g id="Group-2" transform="translate(149.000000, 65.000000)">
-                      <g id="marcon_logo" transform="translate(0.000000, 17.000000)">
-                        <g id="marcon" transform="translate(71.000000, 17.000000)">
-                          <polygon id="Fill-1" fill="#000000" points="19.1377 21.7495 19.1377 6.2025 13.0617 21.7495 11.0577 21.7495 4.9807 6.2025 4.9807 21.7495 0.3907 21.7495 0.3907 0.1905 6.8227 0.1905 12.0597 13.6685 17.2957 0.1905 23.7607 0.1905 23.7607 21.7495"></polygon>
-                          <path d="M36.4922,18 L36.4922,16.061 C35.8132,15.156 34.5212,14.671 33.1952,14.671 C31.5792,14.671 30.2542,15.544 30.2542,17.031 C30.2542,18.517 31.5792,19.357 33.1952,19.357 C34.5212,19.357 35.8132,18.905 36.4922,18 Z M36.4922,21.75 L36.4922,20.101 C35.4262,21.394 33.5832,22.138 31.5472,22.138 C29.0582,22.138 26.1492,20.457 26.1492,16.966 C26.1492,13.281 29.0582,11.923 31.5472,11.923 C33.6482,11.923 35.4582,12.603 36.4922,13.831 L36.4922,11.859 C36.4922,10.275 35.1352,9.241 33.0662,9.241 C31.4172,9.241 29.8662,9.887 28.5732,11.083 L26.9572,8.207 C28.8642,6.494 31.3212,5.75 33.7772,5.75 C37.3652,5.75 40.6292,7.172 40.6292,11.665 L40.6292,21.75 L36.4922,21.75 Z"
-                            id="Fill-2" fill="#000000"></path>
-                          <path d="M43.8599,21.7495 L43.8599,6.1375 L47.9649,6.1375 L47.9649,8.2385 C49.0959,6.8815 51.0029,5.7495 52.9429,5.7495 L52.9429,9.7575 C52.6519,9.6935 52.2959,9.6615 51.8109,9.6615 C50.4539,9.6615 48.6439,10.4365 47.9649,11.4385 L47.9649,21.7495 L43.8599,21.7495 Z"
-                            id="Fill-4" fill="#000000"></path>
-                          <path d="M53.6841,13.9277 C53.6841,9.1437 57.1751,5.7497 61.9581,5.7497 C65.1591,5.7497 67.0981,7.1397 68.1331,8.5617 L65.4501,11.0827 C64.7061,9.9847 63.5751,9.4027 62.1531,9.4027 C59.6641,9.4027 57.9181,11.2127 57.9181,13.9277 C57.9181,16.6427 59.6641,18.4847 62.1531,18.4847 C63.5751,18.4847 64.7061,17.8387 65.4501,16.7717 L68.1331,19.2927 C67.0981,20.7147 65.1591,22.1377 61.9581,22.1377 C57.1751,22.1377 53.6841,18.7437 53.6841,13.9277"
-                            id="Fill-6" fill="#000000"></path>
-                          <path d="M81.2534,13.9277 C81.2534,11.5037 79.8314,9.4027 77.2454,9.4027 C74.6914,9.4027 73.2704,11.5037 73.2704,13.9277 C73.2704,16.3847 74.6914,18.4847 77.2454,18.4847 C79.8314,18.4847 81.2534,16.3847 81.2534,13.9277 M69.0034,13.9277 C69.0034,9.4997 72.1064,5.7497 77.2454,5.7497 C82.4174,5.7497 85.5204,9.4997 85.5204,13.9277 C85.5204,18.3557 82.4174,22.1377 77.2454,22.1377 C72.1064,22.1377 69.0034,18.3557 69.0034,13.9277"
-                            id="Fill-8" fill="#000000"></path>
-                          <g id="Group-12" transform="translate(87.000000, 5.328200)">
-                            <mask id="mask-2" fill="white">
-                              <use xlink:href="#path-1"></use>
-                            </mask>
-                            <g id="Clip-11"></g>
-                            <path d="M11.3174,16.4213 L11.3174,6.9833 C11.3174,4.8173 10.1864,4.0743 8.4414,4.0743 C6.8244,4.0743 5.5964,4.9793 4.8854,5.8843 L4.8854,16.4213 L0.7804,16.4213 L0.7804,0.8093 L4.8854,0.8093 L4.8854,2.8143 C5.8874,1.6503 7.8264,0.4213 10.3484,0.4213 C13.8064,0.4213 15.4554,2.3613 15.4554,5.3993 L15.4554,16.4213 L11.3174,16.4213 Z"
-                              id="Fill-10" fill="#000000" mask="url(#mask-2)"></path>
-                          </g>
-                        </g>
-                        <g id="symbol" transform="translate(0.000000, 0.328200)" fill="#F73131">
-                          <polygon id="Fill-13" points="34.3975 7.3017 27.7675 0.6717 6.5955 21.8437 0.0005 28.4387 26.5615 54.9997 33.1915 48.3697 13.2605 28.4387"></polygon>
-                          <polygon id="Fill-16" points="54.3281 27.2328 36.8511 44.7098 30.2211 38.0798 47.6981 20.6028"></polygon>
-                          <polygon id="Fill-18" points="44.3628 17.2675 26.8858 34.7445 20.2558 28.1145 37.7328 10.6375"></polygon>
-                        </g>
-                      </g>
-                    </g>
-                  </g>
-                </g>
-              </svg>
+              <img src="./src/images/brand.svg" alt="Felipe Marcon Design de Produto">
             </a>
           </div>
+        </div>
+        <div class="col-6 col-md-auto">
+          <a href="mailto:oi@felipemarcon.com.br" class="mButton">
+            <span class="mButton__text">Entre em contato</span>
+          </a>
         </div>
       </div>
     </div>
   </header>
-  <section class="mr_previous">
-    <div class="container">
+  <section class="mAboutMe">
+    <div class="container px-lg-0">
       <div class="row">
-        <div class="col-md-8">
-          <div class="mr_previous__headline">
-            <h1>Olá 👋🏻!</h1>
-            <p>Sou o Felipe Marcon, Fe ou Marcon. Atendo por qualquer um deles ;).</p>
-            <p>Sou formado em Design Gráfico pela Universidade de Sorocaba e Pós Graduado em Tecnologias e Inovações Web. Atualmente sou Product Designer na Gamers Club, uma startup focada e-Sports, e desenvolvedor front-end em projetos pontuais.
-            <p>A experiência com desenvolvimento vem de projetos pontuais dentro da Gamers Club, mas também da época em que atuei como Desenvolvedor Web em agências de Publicidade e Marketing Digital. Nesses cargos eu era o responsável por criar e estruturar projetos web, desde wireframes até o deploy para produção.</p>
-
-            <p>Sou um aficionado em design, interações, desenvolvimento web, tecnologia e busca sempre estar evoluindo e aprendendo coisas novas.</p>
-
-            <p>Em minhas horas vagas gosto de jogar, especialmente no desktop, ouvir muita música, tocar guitarra (meu grande hobby 🎸) e compor músicas.</p>
+        <div class="col-12 col-lg-6">
+          <div class="mAboutMe__image">
+            <img src="./src/images/me.jpg" alt="">
           </div>
-          <div class="mr_previous__contact">
-            <p>Quer conversar? Entre em contato pelo e-mail - <a href="mailto:oi@felipemarcon.com.br">oi@felipemarcon.com.br</a></p>
+        </div>
+        <div class="col-12 col-lg-6">
+          <div class="mAboutMe__container">
+            <div class="mAboutMe__heading">
+              <h1>Hey, sou o Felipe!</h1>
+            </div>
+            <div class="mAboutMe__content">
+              <p>Me chamo Felipe Marcon e sou Designer de Produtos com conhecimentos em desenvolvimento práticos em front-end e back-end.</p>
+
+              <p>Atualmente trabalho no time de Tecnologia e Produto da Gamers Club, uma startup focada no mercado de eSports, ajudando times a desenvolverem novas e melhores soluções para os usuários através de processos de Design alinhados às equipes de engenharia de software.</p>
+
+              <p>Em meu tempo livre gosto de jogar, ler, ouvir muita música, tocar guitarra (meu grande hobby 🎸) e compor músicas.</p>
+            </div>
           </div>
 
-          <div class="mr_previous__social">
+          <div class="mSocial">
+            <div class="mSocial__heading">
+              <h5>Me encontre nas redes!</h5>
+            </div>
             <ul>
+              <li>
+                <a target="_blank" href="https://felipemarcon.medium.com/">
+                  <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M20 40C31.0457 40 40 31.0457 40 20C40 8.9543 31.0457 0 20 0C8.9543 0 0 8.9543 0 20C0 31.0457 8.9543 40 20 40ZM32 10.4035L30.0844 12.2458C30.0039 12.3081 29.9417 12.3909 29.9043 12.4856C29.8669 12.5802 29.8557 12.6833 29.8719 12.7838V26.3273C29.8375 26.5306 29.9219 26.7402 30.0844 26.8653L31.9562 28.7076V29.1111H22.5438V28.7076L24.4844 26.8215C24.6719 26.6307 24.6719 26.5713 24.6719 26.2835V15.3392L19.2781 29.0767H18.55L12.2781 15.3392V24.5476C12.251 24.7382 12.2682 24.9324 12.3284 25.1152C12.3885 25.2981 12.49 25.4645 12.625 25.6017L15.1438 28.667V29.0704H8V28.6732L10.5219 25.5985C10.7906 25.3202 10.9125 24.9292 10.8438 24.5445V13.9004C10.8719 13.6064 10.7594 13.3124 10.5406 13.1122L8.30313 10.4035V10H15.2594L20.6375 21.8358L25.3656 10H32V10.4035Z" fill="#FFC226"/>
+                    </svg>
+                </a>
+              </li>
               <li>
                 <a target="_blank" href="https://behance.net/felipeemarcon">
                   <?xml version="1.0" encoding="UTF-8"?>
                   <svg width="40px" height="40px" viewBox="0 0 40 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                     <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                      <g id="02_Contato" transform="translate(-979.000000, -862.000000)" fill="#FF7272">
+                      <g id="02_Contato" transform="translate(-979.000000, -862.000000)" fill="#FFC226">
                         <g id="behance-logo-button" transform="translate(979.000000, 862.000000)">
                           <path d="M16.715,16.825 C16.715,18.349 16.105,18.571 15.418,18.571 L11.426,18.571 L11.426,15.306 L15.68,15.306 C15.68,15.306 16.715,15.306 16.715,16.825 Z M26.574,18.571 C28.836,18.571 28.8050221,20.821 28.8050221,20.821 L24.004,20.821 C24.004,20.821 24.32,18.571 26.574,18.571 Z M15.68,20.821 C15.68,20.821 17.223,20.802 17.223,22.829 C17.223,24.54 16.07,24.716 15.465,24.732 C15.355,24.732 15.258,24.732 15.195,24.732 L11.426,24.732 L11.426,20.8209967 L15.68,20.821 Z M19.859,0.278 C8.91,0.278 0,9.189 0,20.138 C0,31.091 8.91,40.001 19.859,40.001 C30.812,40.001 39.723,31.091 39.723,20.138 C39.723,9.189 30.812,0.278 19.859,0.278 Z M23.375,15.372 L29.406,15.372 L29.406,13.571 L23.375,13.571 L23.375,15.372 Z M20.324,23.013 C20.324,27.474 15.68,27.329 15.68,27.329 L8.074,27.329 L8.074,12.708 L15.68,12.708 C17.992,12.708 19.82,13.985 19.82,16.603 C19.82,19.216 17.59,19.384 17.59,19.384 C20.527,19.384 20.324,23.013 20.324,23.013 Z M31.609,22.774 L24.031,22.774 C24.031,25.489 26.605,25.317 26.605,25.317 C29.035,25.317 28.949,23.747 28.949,23.747 L31.523,23.747 C31.523,27.919 26.52,27.634 26.52,27.634 C20.52,27.634 20.902,22.044 20.902,22.044 C20.902,22.044 20.898,16.427 26.52,16.427 C32.438,16.427 31.609,22.774 31.609,22.774 Z"
                             id="Fill-5"></path>
@@ -124,7 +112,7 @@
                   <?xml version="1.0" encoding="UTF-8"?>
                   <svg width="40px" height="40px" viewBox="0 0 40 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                     <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                      <g id="02_Contato" transform="translate(-1045.000000, -862.000000)" fill="#FF7272">
+                      <g id="02_Contato" transform="translate(-1045.000000, -862.000000)" fill="#FFC226">
                         <g id="Group-3" transform="translate(1045.000000, 862.000000)">
                           <path d="M19.27,16.642 C17.426,13.364 15.457,10.692 15.316,10.501 C12.344,11.907 10.129,14.642 9.434,17.942 C9.715,17.946 14.156,18.001 19.27,16.642 Z"
                             id="Fill-1"></path>
@@ -154,17 +142,7 @@
                   <svg width="40px" height="40px" viewBox="0 0 40 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                     <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                       <path d="M37.3171343,10.3259163 C35.5286789,7.26160834 33.1027532,4.83559145 30.0387189,3.04731839 C26.9742285,1.25895411 23.6287185,0.365 19.9998176,0.365 C16.3713727,0.365 13.0247682,1.25922774 9.9609163,3.04731839 C6.89660834,4.83550024 4.47077388,7.26160834 2.68231839,10.3259163 C0.894136533,13.3901331 0,16.7362815 0,20.3642703 C0,24.722308 1.27147437,28.6411672 3.81506159,32.121851 C6.35837518,35.6028086 9.64395981,38.0114955 13.6715419,39.3481853 C14.1403638,39.4352002 14.4874198,39.3739979 14.7130746,39.1661292 C14.9388206,38.9579868 15.0515567,38.6973072 15.0515567,38.3851849 C15.0515567,38.3331037 15.0470874,37.8645553 15.0384224,36.9789926 C15.0294838,36.0934299 15.0252881,35.3208769 15.0252881,34.6616986 L14.4263088,34.7653138 C14.0444104,34.8352722 13.5626365,34.8649156 12.9809872,34.8565243 C12.3996114,34.8484065 11.7960716,34.7874779 11.1711884,34.6741945 C10.5460317,34.5619143 9.96456472,34.3015084 9.42633156,33.8935238 C8.88837203,33.4855392 8.50647367,32.9515018 8.28072768,32.2922323 L8.0203217,31.6929793 C7.84674812,31.2940245 7.57348146,30.8508327 7.20015688,30.3650456 C6.8268323,29.8788024 6.44931204,29.5491677 6.06741368,29.3755941 L5.88508389,29.2450719 C5.7635915,29.1583307 5.65085533,29.0537122 5.54660172,28.9323111 C5.44243933,28.8109099 5.36445436,28.6894175 5.31237316,28.5677427 C5.26020075,28.4459767 5.30343453,28.3461012 5.44253054,28.2677514 C5.58162656,28.1894015 5.8330027,28.1513668 6.19775349,28.1513668 L6.71838302,28.2291693 C7.06562139,28.2987629 7.49513164,28.5066317 8.00746102,28.8540525 C8.51951677,29.2011996 8.94045322,29.6525092 9.2703616,30.2077987 C9.66986359,30.9197879 10.1511814,31.4623079 10.7156832,31.8356325 C11.2797289,32.2089571 11.8484264,32.3953001 12.4212283,32.3953001 C12.9940303,32.3953001 13.488756,32.3518839 13.905588,32.2655076 C14.3219639,32.1786752 14.7126185,32.048153 15.0773693,31.8746706 C15.2336129,30.711007 15.6590187,29.8170529 16.3532218,29.1921698 C15.3637703,29.0881898 14.4741943,28.9315814 13.6840377,28.7233478 C12.8943372,28.5148406 12.0782769,28.1764497 11.2364039,27.7072628 C10.394075,27.2387145 9.69531132,26.6568827 9.13993059,25.9627708 C8.58445864,25.2682941 8.12858856,24.3565539 7.77295882,23.2283712 C7.41714666,22.0997325 7.23919498,20.7977938 7.23919498,19.3221904 C7.23919498,17.2211565 7.92509794,15.4332483 9.29663023,13.9574624 C8.65414346,12.3778789 8.71479845,10.6071183 9.4787776,8.64536284 C9.98225956,8.48893683 10.7289087,8.60632474 11.7183602,8.99679689 C12.7079941,9.38745146 13.4325704,9.72210279 13.8928185,9.99956513 C14.3530667,10.2769363 14.7218308,10.5119857 14.999658,10.7026157 C16.6145399,10.2513973 18.2810469,10.0257425 19.9996352,10.0257425 C21.7182234,10.0257425 23.3850953,10.2513973 25.0000684,10.7026157 L25.9896111,10.077915 C26.6663018,9.66108297 27.465397,9.27909339 28.3849813,8.93185502 C29.3051128,8.58479906 30.0087106,8.48921046 30.495045,8.64563647 C31.2759893,10.6074831 31.3455829,12.3781526 30.7029137,13.957736 C32.0743548,15.4335219 32.7605314,17.2218862 32.7605314,19.322464 C32.7605314,20.7980675 32.5819412,22.1041106 32.2266763,23.2414143 C31.8709554,24.3789005 31.4111633,25.2897285 30.8471175,25.9758139 C30.2824333,26.6618081 29.5792004,27.2390793 28.7373274,27.7075365 C27.8952721,28.1763584 27.0789381,28.5147494 26.2892376,28.7232566 C25.4991723,28.9317638 24.6095963,29.0884634 23.6201448,29.1926258 C24.5225814,29.9735701 24.973891,31.20628 24.973891,32.8902083 L24.973891,38.3844552 C24.973891,38.6965775 25.0824315,38.9571659 25.2996949,39.1653995 C25.5166847,39.3732682 25.8593625,39.4344705 26.3281845,39.3473644 C30.3563138,38.010857 33.6418985,35.6020789 36.1851208,32.1211214 C38.7280696,28.6404375 40,24.7215783 40,20.3635406 C39.9990879,16.7360078 39.1044953,13.3901331 37.3171343,10.3259163 Z"
-                        id="Shape" fill="#FF7272" fill-rule="nonzero"></path>
-                    </g>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a target="_blank" href="https://twitter.com/felipeemarcon">
-                  <svg width="40px" height="40px" viewBox="0 0 40 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                      <path d="M29.525,14.905 L29.541,15.551 C29.541,22.138 24.524,29.737 15.352,29.737 C12.533,29.737 9.914,28.915 7.702,27.498 C8.095,27.542 8.489,27.564 8.889,27.564 C11.226,27.564 13.379,26.77 15.086,25.434 C12.903,25.389 11.065,23.951 10.426,21.969 C10.738,22.029 11.049,22.057 11.369,22.057 C11.821,22.057 12.265,21.998 12.681,21.888 C10.403,21.426 8.682,19.409 8.682,16.991 L8.682,16.93 C9.357,17.302 10.121,17.532 10.937,17.553 C9.602,16.664 8.718,15.135 8.718,13.406 C8.718,12.492 8.963,11.632 9.395,10.897 C11.858,13.917 15.531,15.898 19.679,16.107 C19.598,15.743 19.552,15.364 19.552,14.971 C19.552,12.219 21.787,9.985 24.539,9.985 C25.971,9.985 27.27,10.593 28.174,11.558 C29.318,11.336 30.386,10.92 31.351,10.348 C30.973,11.514 30.186,12.492 29.155,13.11 C30.164,12.99 31.129,12.717 32.019,12.322 C31.351,13.324 30.505,14.2 29.525,14.905 M19.858,0 C8.909,0 0,8.91 0,19.86 C0,30.812 8.909,39.722 19.858,39.722 C30.811,39.722 39.722,30.812 39.722,19.86 C39.722,8.91 30.811,0 19.858,0"
-                        id="Fill-1" fill="#FF7272"></path>
+                        id="Shape" fill="#FFC226" fill-rule="nonzero"></path>
                     </g>
                   </svg>
                 </a>
