update about me description

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="mAboutMe__content">
               <p>Me chamo Felipe Marcon e sou Designer de Produtos com conhecimentos em desenvolvimento práticos em front-end e back-end.</p>
 
-              <p>Atualmente trabalho no time de Tecnologia e Produto da Gamers Club, uma startup focada no mercado de eSports, ajudando times a desenvolverem novas e melhores soluções para os usuários através de processos de Design alinhados às equipes de engenharia de software.</p>
+              <p>Atualmente trabalho no time de Tecnologia e Produto do Bexs Banco, um banco de câmbio brasileiro focado em oferecer soluções para pagamentos internacionais, ajudando times a desenvolverem novas e melhores soluções para os usuários internos e externo através de processos de Design alinhados às equipes de engenharia de software.</p>
 
               <p>Em meu tempo livre gosto de jogar, ler, ouvir muita música, tocar guitarra (meu grande hobby 🎸) e compor músicas.</p>
             </div>
