--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html class="no-js">
+<html class="no-js" lang="pt-BR">
 
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" >
 
   <title>Felipe Marcon - Designer de Produto</title>
-  <meta name="description" content="">
+  <meta name="description" content="Me chamo Felipe Marcon e sou Designer de Produtos com conhecimentos em desenvolvimento práticos em front-end e back-end.">
   <meta name="keywords" content="">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -46,7 +46,7 @@
         <div class="col-6 col-md-2">
           <div class="mHeader__brand">
             <a href="/">
-              <img src="./src/images/brand.svg" alt="Felipe Marcon Design de Produto">
+              <img src="./src/images/brand.svg" alt="Foto de Felipe Marcon sentado usando um boté virado para trás e uma camiseta preta.">
             </a>
           </div>
         </div>
@@ -63,7 +63,7 @@
       <div class="row">
         <div class="col-12 col-lg-6">
           <div class="mAboutMe__image">
-            <img src="./src/images/me.jpg" alt="">
+            <img src="./src/images/me.jpg" alt="" aria-hidden="true">
           </div>
         </div>
         <div class="col-12 col-lg-6">
@@ -74,7 +74,7 @@
             <div class="mAboutMe__content">
               <p>Me chamo Felipe Marcon e sou Designer de Produtos com conhecimentos em desenvolvimento práticos em front-end e back-end.</p>
 
-              <p>Atualmente trabalho no time de Tecnologia e Produto do Bexs Banco, um banco de câmbio brasileiro focado em oferecer soluções para pagamentos internacionais, ajudando times a desenvolverem novas e melhores soluções para os usuários internos e externo através de processos de Design alinhados às equipes de engenharia de software.</p>
+              <p>Atualmente trabalho no time de Tecnologia e Produto da Collact, uma startup do grupo Stone focada em programas de fidelidade para comerciantes e estabelecimentos brasileiros, desenvolvendo soluções que possam ajudar essas pessoas empreendedoras a conseguir melhorar cada vez mais o seu negócio.</p>
 
               <p>Em meu tempo livre gosto de jogar, ler, ouvir muita música, tocar guitarra (meu grande hobby 🎸) e compor músicas.</p>
             </div>
@@ -87,22 +87,22 @@
             <ul>
               <li>
                 <a target="_blank" href="https://www.linkedin.com/in/felipeemarcon">
-                  <svg width="48px" height="48px" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <svg width="" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M20 40C31.0457 40 40 31.0457 40 20C40 8.9543 31.0457 0 20 0C8.9543 0 0 8.9543 0 20C0 31.0457 8.9543 40 20 40ZM14.2882 9.64862C14.2882 11.1114 13.1044 12.2972 11.6441 12.2972C10.1838 12.2972 9 11.1114 9 9.64862C9 8.18583 10.1838 7 11.6441 7C13.1044 7 14.2882 8.18583 14.2882 9.64862ZM16.7849 28.9988V14.3043H21.1571V16.3137H21.2187C21.8266 15.1601 23.313 13.9411 25.5305 13.9411C30.1492 13.9411 31 16.9832 31 20.9416V29H26.4429V21.8531C26.4429 20.1499 26.4139 17.9576 24.0731 17.9576C21.6997 17.9576 21.3396 19.8146 21.3396 21.732V28.9988H16.7849ZM13.9245 14.3043H9.36254V28.9988H13.9245V14.3043Z" fill="#FFC226"/>
                   </svg>
                 </a>
               </li>
               <li>
                 <a target="_blank" href="https://felipemarcon.medium.com/">
-                  <svg width="48px" height="48px" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <svg width="" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M20 40C31.0457 40 40 31.0457 40 20C40 8.9543 31.0457 0 20 0C8.9543 0 0 8.9543 0 20C0 31.0457 8.9543 40 20 40ZM32 10.4035L30.0844 12.2458C30.0039 12.3081 29.9417 12.3909 29.9043 12.4856C29.8669 12.5802 29.8557 12.6833 29.8719 12.7838V26.3273C29.8375 26.5306 29.9219 26.7402 30.0844 26.8653L31.9562 28.7076V29.1111H22.5438V28.7076L24.4844 26.8215C24.6719 26.6307 24.6719 26.5713 24.6719 26.2835V15.3392L19.2781 29.0767H18.55L12.2781 15.3392V24.5476C12.251 24.7382 12.2682 24.9324 12.3284 25.1152C12.3885 25.2981 12.49 25.4645 12.625 25.6017L15.1438 28.667V29.0704H8V28.6732L10.5219 25.5985C10.7906 25.3202 10.9125 24.9292 10.8438 24.5445V13.9004C10.8719 13.6064 10.7594 13.3124 10.5406 13.1122L8.30313 10.4035V10H15.2594L20.6375 21.8358L25.3656 10H32V10.4035Z" fill="#FFC226"/>
                     </svg>
                 </a>
               </li>
               <li>
                 <a target="_blank" href="https://github.com/felipeemarcon">
-                  <svg width="48px" height="48px" viewBox="0 0 40 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                  <svg width="" viewBox="0 0 40 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <g id="github-icon" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                       <path d="M37.3171343,10.3259163 C35.5286789,7.26160834 33.1027532,4.83559145 30.0387189,3.04731839 C26.9742285,1.25895411 23.6287185,0.365 19.9998176,0.365 C16.3713727,0.365 13.0247682,1.25922774 9.9609163,3.04731839 C6.89660834,4.83550024 4.47077388,7.26160834 2.68231839,10.3259163 C0.894136533,13.3901331 0,16.7362815 0,20.3642703 C0,24.722308 1.27147437,28.6411672 3.81506159,32.121851 C6.35837518,35.6028086 9.64395981,38.0114955 13.6715419,39.3481853 C14.1403638,39.4352002 14.4874198,39.3739979 14.7130746,39.1661292 C14.9388206,38.9579868 15.0515567,38.6973072 15.0515567,38.3851849 C15.0515567,38.3331037 15.0470874,37.8645553 15.0384224,36.9789926 C15.0294838,36.0934299 15.0252881,35.3208769 15.0252881,34.6616986 L14.4263088,34.7653138 C14.0444104,34.8352722 13.5626365,34.8649156 12.9809872,34.8565243 C12.3996114,34.8484065 11.7960716,34.7874779 11.1711884,34.6741945 C10.5460317,34.5619143 9.96456472,34.3015084 9.42633156,33.8935238 C8.88837203,33.4855392 8.50647367,32.9515018 8.28072768,32.2922323 L8.0203217,31.6929793 C7.84674812,31.2940245 7.57348146,30.8508327 7.20015688,30.3650456 C6.8268323,29.8788024 6.44931204,29.5491677 6.06741368,29.3755941 L5.88508389,29.2450719 C5.7635915,29.1583307 5.65085533,29.0537122 5.54660172,28.9323111 C5.44243933,28.8109099 5.36445436,28.6894175 5.31237316,28.5677427 C5.26020075,28.4459767 5.30343453,28.3461012 5.44253054,28.2677514 C5.58162656,28.1894015 5.8330027,28.1513668 6.19775349,28.1513668 L6.71838302,28.2291693 C7.06562139,28.2987629 7.49513164,28.5066317 8.00746102,28.8540525 C8.51951677,29.2011996 8.94045322,29.6525092 9.2703616,30.2077987 C9.66986359,30.9197879 10.1511814,31.4623079 10.7156832,31.8356325 C11.2797289,32.2089571 11.8484264,32.3953001 12.4212283,32.3953001 C12.9940303,32.3953001 13.488756,32.3518839 13.905588,32.2655076 C14.3219639,32.1786752 14.7126185,32.048153 15.0773693,31.8746706 C15.2336129,30.711007 15.6590187,29.8170529 16.3532218,29.1921698 C15.3637703,29.0881898 14.4741943,28.9315814 13.6840377,28.7233478 C12.8943372,28.5148406 12.0782769,28.1764497 11.2364039,27.7072628 C10.394075,27.2387145 9.69531132,26.6568827 9.13993059,25.9627708 C8.58445864,25.2682941 8.12858856,24.3565539 7.77295882,23.2283712 C7.41714666,22.0997325 7.23919498,20.7977938 7.23919498,19.3221904 C7.23919498,17.2211565 7.92509794,15.4332483 9.29663023,13.9574624 C8.65414346,12.3778789 8.71479845,10.6071183 9.4787776,8.64536284 C9.98225956,8.48893683 10.7289087,8.60632474 11.7183602,8.99679689 C12.7079941,9.38745146 13.4325704,9.72210279 13.8928185,9.99956513 C14.3530667,10.2769363 14.7218308,10.5119857 14.999658,10.7026157 C16.6145399,10.2513973 18.2810469,10.0257425 19.9996352,10.0257425 C21.7182234,10.0257425 23.3850953,10.2513973 25.0000684,10.7026157 L25.9896111,10.077915 C26.6663018,9.66108297 27.465397,9.27909339 28.3849813,8.93185502 C29.3051128,8.58479906 30.0087106,8.48921046 30.495045,8.64563647 C31.2759893,10.6074831 31.3455829,12.3781526 30.7029137,13.957736 C32.0743548,15.4335219 32.7605314,17.2218862 32.7605314,19.322464 C32.7605314,20.7980675 32.5819412,22.1041106 32.2266763,23.2414143 C31.8709554,24.3789005 31.4111633,25.2897285 30.8471175,25.9758139 C30.2824333,26.6618081 29.5792004,27.2390793 28.7373274,27.7075365 C27.8952721,28.1763584 27.0789381,28.5147494 26.2892376,28.7232566 C25.4991723,28.9317638 24.6095963,29.0884634 23.6201448,29.1926258 C24.5225814,29.9735701 24.973891,31.20628 24.973891,32.8902083 L24.973891,38.3844552 C24.973891,38.6965775 25.0824315,38.9571659 25.2996949,39.1653995 C25.5166847,39.3732682 25.8593625,39.4344705 26.3281845,39.3473644 C30.3563138,38.010857 33.6418985,35.6020789 36.1851208,32.1211214 C38.7280696,28.6404375 40,24.7215783 40,20.3635406 C39.9990879,16.7360078 39.1044953,13.3901331 37.3171343,10.3259163 Z"
                         id="Shape" fill="#FFC226" fill-rule="nonzero"></path>
                     </g>
@@ -111,12 +111,12 @@
               </li>
               <li>
                 <a target="_blank" href="https://behance.net/felipeemarcon">
-                  <svg width="48px" height="48px" viewBox="0 0 40 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                      <g id="02_Contato" transform="translate(-979.000000, -862.000000)" fill="#FFC226">
+                  <svg width="" viewBox="0 0 40 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <g id="behance-icon" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                      <g id="behance_group_icon" transform="translate(-979.000000, -862.000000)" fill="#FFC226">
                         <g id="behance-logo-button" transform="translate(979.000000, 862.000000)">
                           <path d="M16.715,16.825 C16.715,18.349 16.105,18.571 15.418,18.571 L11.426,18.571 L11.426,15.306 L15.68,15.306 C15.68,15.306 16.715,15.306 16.715,16.825 Z M26.574,18.571 C28.836,18.571 28.8050221,20.821 28.8050221,20.821 L24.004,20.821 C24.004,20.821 24.32,18.571 26.574,18.571 Z M15.68,20.821 C15.68,20.821 17.223,20.802 17.223,22.829 C17.223,24.54 16.07,24.716 15.465,24.732 C15.355,24.732 15.258,24.732 15.195,24.732 L11.426,24.732 L11.426,20.8209967 L15.68,20.821 Z M19.859,0.278 C8.91,0.278 0,9.189 0,20.138 C0,31.091 8.91,40.001 19.859,40.001 C30.812,40.001 39.723,31.091 39.723,20.138 C39.723,9.189 30.812,0.278 19.859,0.278 Z M23.375,15.372 L29.406,15.372 L29.406,13.571 L23.375,13.571 L23.375,15.372 Z M20.324,23.013 C20.324,27.474 15.68,27.329 15.68,27.329 L8.074,27.329 L8.074,12.708 L15.68,12.708 C17.992,12.708 19.82,13.985 19.82,16.603 C19.82,19.216 17.59,19.384 17.59,19.384 C20.527,19.384 20.324,23.013 20.324,23.013 Z M31.609,22.774 L24.031,22.774 C24.031,25.489 26.605,25.317 26.605,25.317 C29.035,25.317 28.949,23.747 28.949,23.747 L31.523,23.747 C31.523,27.919 26.52,27.634 26.52,27.634 C20.52,27.634 20.902,22.044 20.902,22.044 C20.902,22.044 20.898,16.427 26.52,16.427 C32.438,16.427 31.609,22.774 31.609,22.774 Z"
-                            id="Fill-5"></path>
+                            id="behance-fill-path"></path>
                         </g>
                       </g>
                     </g>
@@ -125,9 +125,9 @@
               </li>
               <li>
                 <a target="_blank" href="https://dribbble.com/felipee_marcon">
-                  <svg width="48px" height="48px" viewBox="0 0 40 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                      <g id="02_Contato" transform="translate(-1045.000000, -862.000000)" fill="#FFC226">
+                  <svg width="" viewBox="0 0 40 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <g id="dribble-icon" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                      <g id="dribbble_group_icon" transform="translate(-1045.000000, -862.000000)" fill="#FFC226">
                         <g id="Group-3" transform="translate(1045.000000, 862.000000)">
                           <path d="M19.27,16.642 C17.426,13.364 15.457,10.692 15.316,10.501 C12.344,11.907 10.129,14.642 9.434,17.942 C9.715,17.946 14.156,18.001 19.27,16.642 Z"
                             id="Fill-1"></path>
