--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="col-6 col-md-2">
           <div class="mHeader__brand">
             <a href="/">
-              <img src="./src/images/brand.svg" alt="Foto de Felipe Marcon sentado usando um boté virado para trás e uma camiseta preta.">
+              <img src="./src/images/brand.svg" alt="" aria-hidden="true">
             </a>
           </div>
         </div>
@@ -63,7 +63,7 @@
       <div class="row">
         <div class="col-12 col-lg-6">
           <div class="mAboutMe__image">
-            <img src="./src/images/me.jpg" alt="" aria-hidden="true">
+            <img src="./src/images/me.jpg" alt="Foto de Felipe Marcon sentado usando um boté virado para trás e uma camiseta preta.">
           </div>
         </div>
         <div class="col-12 col-lg-6">
