add "alt" attr to header logo

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="col-6 col-md-2">
           <div class="mHeader__brand">
             <a href="/">
-              <img src="./src/images/brand.svg" alt="" aria-hidden="true">
+              <img src="./src/images/brand.svg" alt="Ícone do logotipo da marca de Felipe Marcon. A forma é um quadrado em 90 graus com com formas que remetem as letras F, E e M, iniciais de Felipe Marcon. Ao lado do quadrado existe a palavra Marc.">
             </a>
           </div>
         </div>
