--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400;600;700&family=Karla:wght@400;600;700&display=swap" rel="stylesheet">
 
   <!-- <link rel="stylesheet" media="all" href="src/styles/main.css" /> -->
-  <link async rel="stylesheet" media="screen" href="https://cdn.jsdelivr.net/npm/bootstrap-v4-grid-only@1.0.0/dist/bootstrap-grid.min.css" />
-  <link async rel="stylesheet" media="screen" href="https://cdn.jsdelivr.net/npm/bootstrap-utilities@4.1.3/bootstrap-utilities.min.css" />
-  <link async rel="stylesheet" media="screen" href="dist/style.css" />
+  <link rel="stylesheet" media="screen" href="https://cdn.jsdelivr.net/npm/bootstrap-v4-grid-only@1.0.0/dist/bootstrap-grid.min.css" />
+  <link rel="stylesheet" media="screen" href="https://cdn.jsdelivr.net/npm/bootstrap-utilities@4.1.3/bootstrap-utilities.min.css" />
+  <link rel="stylesheet" media="screen" href="dist/style.css" />
 
 </head>
 
