change brand logo alt attr

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="col-6 col-md-2 px-lg-0">
           <div class="mHeader__brand">
             <a href="/">
-              <img src="./src/images/brand_2.svg" alt="Ícone do logotipo da marca de Felipe Marcon. A forma é um quadrado em 90 graus com com formas que remetem as letras F, E e M, iniciais de Felipe Marcon. Ao lado do quadrado existe a palavra Marc." loading="lazy">
+              <img src="./src/images/brand_2.svg" alt="Ícone do logotipo da marca de Felipe Marcon." loading="lazy">
             </a>
           </div>
         </div>
